// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component List render list where 1 editing item 1`] = `
.emotion-20 {
  padding: 20px;
  margin-bottom: 35px;
  border-radius: 12px;
  box-shadow: rgba(52,58,64,0.15) 0px 1px 10px 0px, rgba(52,58,64,0.1) 0px 6px 12px 0px, rgba(52,58,64,0.12) 0px 6px 15px -2px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 10px auto;
  border-bottom: 1px solid #ddd;
  padding: 0 0 10px;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  white-space: nowrap;
  -webkit-appearance: none;
  box-sizing: border-box;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  border: none;
  text-rendering: optimizeLegibility;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  cursor: pointer;
  box-shadow: none;
  font-weight: 500;
  position: relative;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0 0.8rem;
  height: 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: white;
  color: #212529;
  background: linear-gradient(to top,#f1f3f5,white);
  box-shadow: inset 0 0 0 1px hsla(210,10.8%,14.5%,0.2),inset 0 -1px 1px 0 hsla(210,10.8%,14.5%,0.1);
  padding: 0;
  width: 30px;
}

.emotion-1:focus {
  outline: 3px auto hsla(208.79999999999995,77.2%,42.9%,0.8);
}

.emotion-1:focus:not([data-focus-visible-added]) {
  outline: none;
}

.emotion-1[aria-expanded="true"] {
  background: none;
  background-color: #f1f3f5;
  box-shadow: inset 0 0 0 1px hsla(210,10.8%,14.5%,0.3),inset 0 -1px 1px 0 hsla(210,10.8%,14.5%,0.15);
}

.emotion-12 {
  display: block;
  width: 100%;
  line-height: 1.5;
  color: #212529;
  background-color: transparent;
  background-image: none;
  background-clip: padding-box;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  box-sizing: border-box;
  touch-action: manipulation;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  border: none;
  box-shadow: 0 0 0 2px transparent inset,0 0 0 1px hsla(210,10.8%,14.5%,0.2) inset;
  border-radius: 0.25rem;
  -webkit-transition: background 0.25s cubic-bezier(0.35,0,0.25,1),border-color 0.15s cubic-bezier(0.35,0,0.25,1),box-shadow 0.15s cubic-bezier(0.35,0,0.25,1);
  transition: background 0.25s cubic-bezier(0.35,0,0.25,1),border-color 0.15s cubic-bezier(0.35,0,0.25,1),box-shadow 0.15s cubic-bezier(0.35,0,0.25,1);
  font-size: 0.875rem;
  padding: 0.25rem 0.5rem;
  height: 30px;
}

.emotion-12::-webkit-input-placeholder {
  color: hsla(210,10.8%,14.5%,0.45);
}

.emotion-12::-moz-placeholder {
  color: hsla(210,10.8%,14.5%,0.45);
}

.emotion-12:-ms-input-placeholder {
  color: hsla(210,10.8%,14.5%,0.45);
}

.emotion-12::placeholder {
  color: hsla(210,10.8%,14.5%,0.45);
}

.emotion-12:focus {
  box-shadow: 0 0 0 3px hsla(209,75.4%,38.2%,0.1),inset 0 0 0 1px hsla(210,10.8%,14.5%,0.2),inset 0 -1px 1px 0 hsla(210,10.8%,14.5%,0.05);
  outline: none;
}

.emotion-12:disabled {
  opacity: 0.8;
  background: #f1f3f5;
  cursor: not-allowed;
  box-shadow: 0 0 0 2px transparent inset,0 0 0 1px hsla(210,10.8%,14.5%,0.12) inset;
}

.emotion-12:active {
  background: #f1f3f5;
}

<div
  className="emotion-20"
>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_1"
        onChange={[Function]}
        type="checkbox"
      />
      Сделать ДЗ
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_3"
        onChange={[Function]}
        type="checkbox"
      />
      Приготовить ужин
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_4"
        onChange={[Function]}
        type="checkbox"
      />
      Уборка квартиры
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <form
    className="emotion-3"
    onSubmit={[Function]}
  >
    <input
      className="Input emotion-12"
      name="text_0"
      onChange={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      placeholder="Переименовать задачу"
      type="text"
      value="Полить цветы"
    />
    <button
      className="Button Touchable emotion-1"
      name="saveEditing"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="submit"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        saveEditing
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
    </button>
    <div
      className="Button Touchable emotion-1"
      id="cancelEditing_0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        cancelEditing
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </form>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={true}
        name="checkbox_2"
        onChange={[Function]}
        type="checkbox"
      />
      Купить продукты
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Component List renders empty list 1`] = `
.emotion-0 {
  padding: 20px;
  margin-bottom: 35px;
  border-radius: 12px;
  box-shadow: rgba(52,58,64,0.15) 0px 1px 10px 0px, rgba(52,58,64,0.1) 0px 6px 12px 0px, rgba(52,58,64,0.12) 0px 6px 15px -2px;
}

<div
  className="emotion-0"
>
  Список пустой
</div>
`;

exports[`Component List renders list 1`] = `
.emotion-20 {
  padding: 20px;
  margin-bottom: 35px;
  border-radius: 12px;
  box-shadow: rgba(52,58,64,0.15) 0px 1px 10px 0px, rgba(52,58,64,0.1) 0px 6px 12px 0px, rgba(52,58,64,0.12) 0px 6px 15px -2px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 10px auto;
  border-bottom: 1px solid #ddd;
  padding: 0 0 10px;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  white-space: nowrap;
  -webkit-appearance: none;
  box-sizing: border-box;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  border: none;
  text-rendering: optimizeLegibility;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  cursor: pointer;
  box-shadow: none;
  font-weight: 500;
  position: relative;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0 0.8rem;
  height: 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: white;
  color: #212529;
  background: linear-gradient(to top,#f1f3f5,white);
  box-shadow: inset 0 0 0 1px hsla(210,10.8%,14.5%,0.2),inset 0 -1px 1px 0 hsla(210,10.8%,14.5%,0.1);
  padding: 0;
  width: 30px;
}

.emotion-1:focus {
  outline: 3px auto hsla(208.79999999999995,77.2%,42.9%,0.8);
}

.emotion-1:focus:not([data-focus-visible-added]) {
  outline: none;
}

.emotion-1[aria-expanded="true"] {
  background: none;
  background-color: #f1f3f5;
  box-shadow: inset 0 0 0 1px hsla(210,10.8%,14.5%,0.3),inset 0 -1px 1px 0 hsla(210,10.8%,14.5%,0.15);
}

<div
  className="emotion-20"
>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_1"
        onChange={[Function]}
        type="checkbox"
      />
      Сделать ДЗ
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_3"
        onChange={[Function]}
        type="checkbox"
      />
      Приготовить ужин
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={false}
        name="checkbox_4"
        onChange={[Function]}
        type="checkbox"
      />
      Уборка квартиры
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={true}
        name="checkbox_0"
        onChange={[Function]}
        type="checkbox"
      />
      Полить цветы
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <label
      className="emotion-0"
    >
      <input
        checked={true}
        name="checkbox_2"
        onChange={[Function]}
        type="checkbox"
      />
      Купить продукты
    </label>
    <div
      className="Button Touchable emotion-1"
      id="editListItem_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        editListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </div>
    <div
      className="Button Touchable emotion-1"
      id="deleteListItem_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchMoveCapture={[Function]}
      onTouchStart={[Function]}
      onTouchStartCapture={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        deleteListItem
      </div>
      <svg
        aria-hidden={true}
        fill="none"
        height="16px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "display": "block",
          }
        }
        viewBox="0 0 24 24"
        width="16px"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </div>
  </div>
</div>
`;
